update deps and devDeps

--- a/test/fixtures/external.css
+++ b/test/fixtures/external.css
@@ -1,5 +1,5 @@
 body {
-  background: #ffffff url('b64---http://cdn.lagden.in/mask.png---') no-repeat right top;
+  background: #ffffff url('b64---https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png---') no-repeat right top;
 }
 
 .another {
